@@ -32,6 +32,7 @@ private:
   void on_combobox_local_input_changed();
   void on_hscale_local_volume_value_changed();
   void on_hscale_local_pan_value_changed();
+  void on_spinbutton_bitrate_value_changed();
   void on_checkbutton_local_mute_toggled();
   void on_checkbutton_local_solo_toggled();
   void on_button_local_remove_clicked();
