@@ -527,3 +527,9 @@
 
 2007/1/11 5:06:30 GMT
 	update files from .glade file
+
+2008/1/31 4:43:48 CET
+	update files from .glade file
+
+2008/1/31 4:46:22 CET
+	update files from .glade file
